about.css
/* CSS Document */


/* Intro About section */

#intro-about {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 60px;
    margin-bottom: 30px;
    gap: 60px;
    padding: 0 15px;
}

#intro-about img {
    width: 100%;
    max-width: 762px;
    border-radius: 10px;
}


/* About text section */

#about-text-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #DBD1AD;
    padding: 0 15px;
    gap: 60px;
}

#about-headline {
    display: flex;
    flex-direction: column;
    padding-top: 30px;
    gap: 10px;
}

#about-text {
    display: flex;
    flex-direction: column;
    gap: 30px;
    padding-bottom: 30px;
    max-width: 762px;
}


/* Flower decoration */

.about-flower-decoration {
    display: flex;
    justify-content: center;
}

.flowers {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 30.76%;
    padding: 50px 120px;
    max-width: 450px;
}


/* Qualifications section */

#about-qualifications {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 60px;
    padding: 15px;
}

#qualifications-content {
    display: flex;
    flex-direction: column;
    max-width: 762px;
    width: 100%;
    gap: 60px;
}

.qualifications-box {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 15px;
    border-radius: 10px;
    background-color: #093409;
    color: #F2EFDE;
}

.qualifications-box img {
    display: flex;
    justify-content: center;
}


/* Hobbies section */

.about-hobbies {
    display: flex;
    flex-direction: column;
    margin: 0 15px;
    align-items: center;
    gap: 60px;
}

.hobbies-box {
    display: flex;
    flex-direction: column;
    padding: 15px;
    gap: 15px;
    max-width: 762px;

    background-color: #DBD1AD;
    border-radius: 10px;
}

.img-and-icons {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hobby-image {
    border-radius: 10px;
    width: 100%;
}

.hobby-dots {
    position: absolute;
    bottom: 10px;
    display: flex;
    gap: 15px;
}

.hobby-dots img {
    width: 15px;
    height: 15px;
}

.hobby-arrows img {
    position: absolute;
    height: 50px;
}

.hobby-arrows img:first-child {
    left: 10px;
}

.hobby-arrows img:last-child {
    right: 10px;
}


/* Call to action - button style is in base.css */

#about-cta {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 60px;
    padding: 60px 15px;
}

#about-cta-headline {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;
}

